[package]
name = "zk-paillier"
version = "0.3.7"
edition = "2018"

authors = [
    "Gary <gary@kzencorp.com>",
    "Morten Dahl <mortendahlcs@gmail.com>",
    "Omer <omer.shlomovits@gmail.com>"
]
keywords = ["paillier", "zero knowledge"]

license = "GPL-3.0-or-later"
categories = ["cryptography"]

[lib]
crate-type = ["lib"]

[dependencies]
rand = "0.6"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.1"
bit-vec = "0.6"
sha2 = "0.8.0"
digest = "0.8.1"

[dependencies.curv]
git = "https://github.com/commerceblock/curv"
features = ["ec_secp256k1"]
branch = "client_version"

[dependencies.paillier]
git = "https://github.com/commerceblock/rust-paillier"
branch = "client_version"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "all"
harness = false
